# fastapi

dailyDo-todo-app/: .env  pyproject.toml
dailyDo-todo-app/dailydo_todo_app/: main.py  settings.py
dailyDo-todo-app/tests/: test_main.py
