[tool.poetry]
name = "dailydo-todo-app"
version = "0.1.0"
description = ""
authors = ["meer004 <165077536+meer004@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlmodel = "^0.0.22"
psycopg = {extras = ["binary"], version = "^3.2.2"}
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
